<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background_image"
...
